--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCE_FILES_CLIENT test/udp_client_test.cpp)
 add_executable(TagSwitchClient ${SOURCE_FILES_CLIENT})
 
 set(SOURCE_FILES_MAIN main.cpp VirtualInterface.cpp VirtualInterface.h SyncQueue.h Packet.cpp Packet.h
-        Switch.cpp Switch.h BufferManager.cpp BufferManager.h SwitchManager.cpp SwitchManager.h )
+        Switch.cpp Switch.h BufferManager.cpp BufferManager.h SwitchManager.cpp SwitchManager.h predicate.cpp predicate.h bv.h)
+
 add_executable(TagSwitchMain ${SOURCE_FILES_MAIN})
 
