insert new matcher

--- a/Switch/CMakeLists.txt
+++ b/Switch/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.4)
 project(TagSwitch)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 
 set(SOURCE_FILES_CLIENT test/udp_client_test.cpp)
 add_executable(TagSwitchClient ${SOURCE_FILES_CLIENT})
@@ -14,10 +14,14 @@ set(SOURCE_FILES_MAIN
         Switch.cpp Switch.h
         BufferManager.cpp BufferManager.h
         SwitchManager.cpp SwitchManager.h
-        predicate.cpp predicate.h
-        bv.h
         ServerConnection.cpp ServerConnection.h
-        hashFunction.h)
+        hashFunction.h
+        patricia_predicate.cc patricia_predicate.hh
+        matcher.hh
+        bitvector.hh
+        filter.hh
+        routing.hh
+        )
 
 add_executable(TagSwitchMain ${SOURCE_FILES_MAIN})
 
